[package]
authors = ["Zhao Guangjian<zgj0315@gmail.com>"]
description = "Some development tools"
documentation = "https://docs.rs/dev_util"
edition = "2021"
keywords = ["dev", "tools", "development", "log"]
license-file = "LICENSE"
name = "dev_util"
readme = "README.md"
repository = "https://github.com/zgj0315/dev_util/"
version = "0.1.0"

[dependencies]
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
log = "0.4"
